// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`The `getOffsetSizes` method should return a DOMRect like Object 1`] = `
{
  "bottom": 0,
  "height": 0,
  "left": 0,
  "right": 0,
  "top": 0,
  "width": 0,
  "x": 0,
  "y": 0,
}
`;

exports[`The `getOffsetSizes` method should return a DOMRect like object without transforms 1`] = `
{
  "bottom": 0,
  "height": 0,
  "left": 0,
  "right": 0,
  "top": 0,
  "width": 0,
  "x": 0,
  "y": 0,
}
`;

exports[`The `getOffsetSizes` method should return a DOMRect like object without transforms 1`] = `
{
  "bottom": -2952,
  "height": 0,
  "left": 0,
  "right": 0,
  "top": -2952,
  "width": 0,
  "x": 0,
  "y": -2952,
}
`;

exports[`The `getOffsetSizes` method should return a DOMRect like object without transforms 1`] = `
{
  "bottom": -2440,
  "height": 0,
  "left": 0,
  "right": 0,
  "top": -2440,
  "width": 0,
  "x": 0,
  "y": -2440,
}
`;

exports[`The `getOffsetSizes` method should return a DOMRect like object without transforms 1`] = `
{
  "bottom": -2440,
  "height": 0,
  "left": 0,
  "right": 0,
  "top": -2440,
  "width": 0,
  "x": 0,
  "y": -2440,
}
`;

exports[`The `getOffsetSizes` method should return a DOMRect like object without transforms 1`] = `
{
  "bottom": -2440,
  "height": 0,
  "left": 0,
  "right": 0,
  "top": -2440,
  "width": 0,
  "x": 0,
  "y": -2440,
}
`;

exports[`The `getOffsetSizes` method should return a DOMRect like object without transforms 1`] = `
{
  "bottom": -2440,
  "height": 0,
  "left": 0,
  "right": 0,
  "top": -2440,
  "width": 0,
  "x": 0,
  "y": -2440,
}
`;
